2001-12-28  Simos Xenitellis  <simos@hellug.gr>

	* configure.in: Added "el" (Greek) to ALL_LINGUAS.

2001-12-28  Lauris Kaplinski  <lauris@localhost.localdomain>

	* src/sp-gradient.c: Lot of changes due to class member rearrangement
	(sp_gradient_repr_flatten_attributes): New method
	(sp_gradient_repr_set_vector): Ditto

	* src/sp-gradient.h: Moved gradientUnits and gradientTransform to
	base SPGradient class, added ::flatten_attributes virtual method

	* src/gradient-chemistry.c (sp_gradient_ensure_vector_normalized): Works
	now for lonely gradients as well

	* src/desktop-events.c (guide_dialog_apply): Flush undo
	(guide_dialog_delete): Ditto
	(sp_dt_guide_event): Ditto

	* src/widgets/sp-color-selector.c: Added 'rrggbbaa' hex value entry,
	use SPColor helpers instead of doing conversions here, added some
	generic color methods and renamed/changed signature of old ones.

	* src/widgets/sp-color-slider.c (sp_color_slider_paint): Update arrow
	the right way

	* src/helper/nr-plain-stuff.c (nr_render_rgba32_rgb): Use computed channels
	instead of plain color ones

	* src/helper/nr-plain-stuff-gdk.c (nr_gdk_draw_rgba32_solid): New method

	* src/text-context.c (sp_text_context_setup): Some XIM handling
	(sp_text_context_destroy): Ditto
	(sp_text_context_root_handler): Ditto

	* src/sp-gradient.c: Killed gcc 3 warnings

	* src/draw-context.c: Started rewriting of drawing context, added 4-member
	path cache (instead of 2 in old version), the goal is to make selection
	continuation and pen tool

	* src/draw-context.h: New members in class

	* src/color.c (sp_color_get_colorspace_class): Broke colorspace descriptor
	into class (process | spot) and type (rgb | cmyk), added new methods and
	renamed old one accordingly
	(sp_color_get_colorspace_type): Ditto
	(sp_color_rgb_to_hsv_floatv): Convenience method
	(sp_color_hsv_to_rgb_floatv): Ditto
	(sp_color_rgb_to_cmyk_floatv): Ditto
	(sp_color_cmyk_to_rgb_floatv): Ditto

	* src/color.h: New convenience macros and methods
