@@ -1,3 +1,8 @@
+2001-12-29  Mitsuru Oka  <oka326@parkcity.ne.jp>
+
+	* src/knotholder.c (knot_moved_handler):
+	Lauris found a incorrect invert matrix bug. I just fixed it.
+
 2001-12-28  Simos Xenitellis  <simos@hellug.gr>
 
 	* configure.in: Added "el" (Greek) to ALL_LINGUAS.
